# mjxsdk

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
.github/workflows/: build-and-test-linux.yml  build-and-test-windows.yml
benchmarks/: CMakeLists.txt
src/: CMakeLists.txt
src/mjxsdk/: allocator.cpp  allocator.hpp  core.hpp  endian.hpp  exception.cpp  exception.hpp  export.hpp  memory_resource.cpp  memory_resource.hpp  native_allocator.cpp  native_allocator.hpp  object.hpp  object_allocator.hpp  smart_pointer.cpp  smart_pointer.hpp  version.hpp
src/mjxsdk/core/: export.hpp  macros.hpp  version.hpp
src/mjxsdk/core/impl/: assert.hpp  dllmain.cpp  tinywin.hpp  utils.hpp
src/mjxsdk/impl/: assert.hpp  dllmain.cpp  global_allocator.hpp  tinywin.hpp  utils.hpp
src/mjxsdk/internal/res/: mjxsdk.rc
src/mjxsdk/memory/: allocator.cpp  allocator.hpp  endian.hpp  exception.cpp  exception.hpp  memory_resource.cpp  memory_resource.hpp  native_allocator.cpp  native_allocator.hpp  object.hpp  object_allocator.hpp  smart_pointer.cpp  smart_pointer.hpp  system_allocator.cpp  system_allocator.hpp
src/mjxsdk/memory/impl/: debug_block.hpp  debug_memory_block.hpp  global_allocator.hpp  utils.hpp
tests/: CMakeLists.txt
tests/src/allocators_compatibility/: test.cpp
tests/src/core/architecture_validation/: test.cpp
tests/src/core/version_encoding/: test.cpp
tests/src/endian/: test.cpp
tests/src/global_allocator/: test.cpp
tests/src/memory/allocators_compatibility/: test.cpp
tests/src/memory/debug_block/: test.cpp
tests/src/memory/debug_memory_block/: test.cpp
tests/src/memory/endian/: test.cpp
tests/src/memory/global_allocator/: test.cpp
tests/src/memory/memory_resource/: test.cpp
tests/src/memory/native_allocator/: test.cpp
tests/src/memory/object_allocator/: test.cpp
tests/src/memory/object_management/: test.cpp
tests/src/memory/shared_array/: test.cpp
tests/src/memory/shared_ptr/: test.cpp
tests/src/memory/system_allocator/: test.cpp
tests/src/memory/unique_array/: test.cpp
tests/src/memory/unique_ptr/: test.cpp
tests/src/memory_resource/: test.cpp
tests/src/native_allocator/: test.cpp
tests/src/object_allocator/: test.cpp
tests/src/object_management/: test.cpp
tests/src/shared_array/: test.cpp
tests/src/shared_ptr/: test.cpp
tests/src/unique_array/: test.cpp
tests/src/unique_ptr/: test.cpp
tests/src/version_encoding/: test.cpp
